inertia/assets/css/components/_step.scss
@use '../partials/functions';
@use '../partials/mixins';

.step {
  position: fixed;
  z-index: 9998;
  top: 50%;
  left: 20px;
  transform: translate(0, -50%);
  display: flex;
  flex-direction: column;
  width: 440px;
  height: fit-content;
  box-shadow: var(--shadow);
  border-radius: var(--border-radius-xl);
  overflow: hidden;
  background: var(--background);
  animation: slideToRight 0.2s forwards;

  @media screen and (max-width: 767px) {
    top: initial;
    left: 1px;
    bottom: -1px;
    transform: none;
    width: calc(100% - 2px);
    box-shadow: var(--shadow);
    border-radius: var(--border-radius-xl) var(--border-radius-xl) 0 0;
    animation: slideToBottom 0.2s forwards;

    @keyframes slideToBottom {
      0% {
        transform: translateY(100%);
      }
      100% {
        transform: translateY(0);
      }
    }
  }

  @keyframes slideToRight {
    0% {
      transform: translate(calc(-100% - 20px), -50%);
    }
    100% {
      transform: translate(0, -50%);
    }
  }

  &:has(.step__pager) {
    .step {
      &__content {
        padding: 18px 18px 0 18px;
      }
    }
  }

  &--no-animations {
    animation: none !important;
  }

  &__drag-handle {
    position: relative;
    height: 36px;

    &:before {
      content: '';
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      background: var(--color-secondary);
      width: 32px;
      height: 4px;
      border-radius: 100px;
    }
  }

  &__close {
    position: absolute;
    z-index: 3;
    top: 10px;
    right: 10px;

    @media screen and (max-width: 767px) {
      top: 6px;
    }
  }

  &__container {
    @media screen and (max-width: 767px) {
      max-height: 60svh;
      overflow-y: scroll;
    }
  }

  &__content {
    display: flex;
    padding: 18px 18px 36px 18px;
    flex-direction: column;

    @media screen and (max-width: 767px) {
      min-height: 140px;
    }
  }

  &__title {
    @include mixins.font-type('title-medium');
    line-height: 1;
    flex: 1;

    &-update {
      display: flex;
      gap: 8px;
      margin-top: 10px;
    }
  }

  &__details {
    display: flex;
    flex-direction: column;
    gap: 2px;
    margin-top: 8px;
  }

  &__detail {
    display: flex;
    gap: 4px;
    @include mixins.font-type('text-medium');
    line-height: 1.14;
    color: var(--color-secondary);

    svg {
      min-width: 14px;
      height: 14px;
    }
  }

  &__description {
    margin-top: 16px;
    @include mixins.font-type('text-medium-secondary');
    color: var(--color-secondary);
  }

  &__link {
    display: flex;
    gap: 4px;
    margin-top: 16px;

    svg {
      min-width: 14px;
    }

    a {
      @include mixins.font-type('text-medium');
      font-weight: 500;
      color: var(--primary);
      text-decoration: underline;
      text-overflow: ellipsis;
      text-wrap: nowrap;
      overflow: hidden;

      &:hover {
        text-decoration: none;
      }
    }
  }

  &__pager {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 36px 18px 18px 18px;

    @media screen and (max-width: 767px) {
      padding: 36px 18px 46px 18px;
    }
  }

  &__page {
    display: flex;
    width: 20px;
    height: 20px;
    justify-content: center;
    align-items: center;

    &:focus {
      outline: none !important;

      svg {
        path {
          fill: var(--primary);
        }
      }
    }

    &--disabled {
      opacity: 0.5;

      svg {
        path {
          fill: var(--color) !important;
        }
      }
    }

    &-index {
      @include mixins.font-type('text-big');
    }
  }
}

